--- a/config.toml
+++ b/config.toml
@@ -1,9 +1,8 @@
 base_url = "https://kottesh.xyz"
 
-compile_sass = true
+compile_sass = true 
 build_search_index = true
 
 [markdown]
-highlight_code = true
-
+highlight_code = false
 [extra]
