--- a/config.toml
+++ b/config.toml
@@ -1,8 +1,9 @@
 base_url = "https://kottesh.xyz"
 
-compile_sass = true 
+compile_sass = false 
 build_search_index = true
 
 [markdown]
 highlight_code = false
+
 [extra]
