--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,12 +1,11 @@
 name: deploy to cloudflare pages
 
-on:
-  push:
-    branches: ['main']
+on: [push]
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    environment: production
 
     steps:
       - uses: actions/checkout@v3
@@ -31,6 +30,6 @@ jobs:
         with:
           apiToken: ${{ secrets.CF_API_TOKEN }}
           accountId: ${{ secrets.CF_ACC_ID }}
+          gitHubToken: ${{ secrets.GITHUB_TOKEN }}
           projectName: sk
           directory: public
-          gitHubToken: ${{ secrets.GITHUB_TOKEN }}
