--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,11 +1,16 @@
 name: deploy to cloudflare pages
 
-on: [push]
+on:
+  push:
+    branches: [main]
+
+permissions:
+  contents: read
+  deployments: write
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    environment: production
 
     steps:
       - uses: actions/checkout@v3
@@ -33,3 +38,5 @@ jobs:
           gitHubToken: ${{ secrets.GITHUB_TOKEN }}
           projectName: sk
           directory: public
+        env:
+          environment: production
