--- a/config.toml
+++ b/config.toml
@@ -1,11 +1,11 @@
-base_url = "https://kottesh.xyz"
 title = "kottesh.xyz"
 description = "Bloop Bleep Bip"
+base_url = "https://kottesh.xyz"
 
 compile_sass = false 
 build_search_index = true
 
-generate_feeds = true 
+generate_feeds = false 
 feed_filenames = ["atom.xml"]
 
 generate_robots_txt = true
@@ -29,9 +29,16 @@ paths_keep_dates = false
 
 [extra]
 
-nav = [
-    {name = "blog", link="/blog"},
-    {name = "uses", link="/uses"},
-    {name = "now", link="/now"},
-    {name = "about", link="/about"}
+routes = [
+    {name="home", path="/"},
+    {name="blog", path="/blog"},
+    {name="about", path="/about"},
+    {name="pow", path="/pow"}
+] 
+
+socials = [
+    {title="github", link="https://github.com/kottesh", icon="/icons/github.svg"},
+    {title="linkedin", link="https://linkedin.com/in/kottesh", icon="/icons/linkedin.svg"},
+    {title="x", link="https://x.com/shreekottes", icon="/icons/x.svg"},
+    {title="say hi@kottesh.xyz", link="mailto:kottezh@gmail.com", icon="/icons/envelope.svg"},
 ]
