--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
         run: zola build
 
       - name: build tailwindcss
-        run: npx tailwindcss -i ./styles/main.css -o ./public/style.css --minify
+        run: npm i @tailwindcss/typography && npx tailwindcss -i ./styles/main.css -o ./public/style.css --minify
       
       - name: publish to cloudflare
         uses: cloudflare/pages-action@v1
