--- a/.prettierrc
+++ b/.prettierrc
@@ -3,12 +3,13 @@
   "semi": true,
   "singlequote": false,
   "plugins": ["prettier-plugin-jinja-template"],
+  "tabwidth": 4,
+  "printWidth": 90,
   "overrides": [
     {
       "files": "*.html",
       "options": {
-        "parser": "jinja-template",
-        "tabwidth": 4
+        "parser": "jinja-template"
       }
     }
   ]
