--- a/config.toml
+++ b/config.toml
@@ -36,7 +36,8 @@ routes = [
     {name = "home", path = "/"},
     {name = "about", path = "/about/"},
     {name = "blog", path = "/blog/"},
-    {name = "resume", path = "https://drive.google.com/file/d/1zCmvlkysuc-0_dTOYy4GtdV5u0vTvHEu/view?usp=sharing"}
+    {name = "notes", path = "/notes"},
+    {name = "resume", path = "https://drive.google.com/file/d/13GIrDMXAGNsy4e60ylp7nmC4pbXzCS7P/view?usp=sharing"}
 ] 
 
 socials = [
