--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
         run: zola build
 
       - name: build tailwindcss
-        run: npm i @tailwindcss/typography && npx tailwindcss -i ./styles/main.css -o ./public/style.css --minify
+        run: npm i tailwindcss@3 @tailwindcss/typography && npx tailwindcss -i ./styles/main.css -o ./public/style.css --minify
       
       - name: publish to cloudflare
         uses: cloudflare/pages-action@v1
@@ -39,3 +39,4 @@ jobs:
           gitHubToken: ${{ secrets.GITHUB_TOKEN }}
           projectName: kottesh 
           directory: public
+
