--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,11 +25,16 @@ jobs:
           ZOLA="https://github.com/getzola/zola/releases/download/$RELEASE/zola-$RELEASE-x86_64-unknown-linux-gnu.tar.gz"
           curl -sL $ZOLA | sudo tar -xz -C /usr/local/bin
 
-      - name: build site
-        run: zola build
+      - name: build kottesh.xyz
+        run: |
+          npm install
+          npm run build
 
-      - name: build tailwindcss
-        run: npm i tailwindcss@3 @tailwindcss/typography && npx tailwindcss -i ./styles/main.css -o ./public/style.css --minify
+      #- name: build site
+      #  run: zola build
+      #
+      #- name: build tailwindcss
+      #  run: npm i tailwindcss@3 @tailwindcss/typography && npx tailwindcss -i ./styles/main.css -o ./public/style.css --minify
       
       - name: publish to cloudflare
         uses: cloudflare/pages-action@v1
