--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,6 +42,6 @@ jobs:
           apiToken: ${{ secrets.CF_API_TOKEN }}
           accountId: ${{ secrets.CF_ACC_ID }}
           gitHubToken: ${{ secrets.GITHUB_TOKEN }}
-          projectName: kottesh 
+          projectName: ktsh 
           directory: public
 
