--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 title = "kottesh"
-description = "Bloop Bleep Bip"
+description = "ratata"
 base_url = "https://kottesh.xyz"
 
 compile_sass = false 
